# tco-ray-trace

./: Cargo.toml
bin_scratch/: Cargo.toml  ModelConfig.toml
bin_scratch/src/: main.rs
src/: config.rs  error.rs  event_loop.rs  latr_core.rs  lib.rs
src/engine/: engine_core.rs  mod.rs  model.rs  physics.rs
src/gpu_utils/: bind_groups.rs  mod.rs
src/shaders/: blit.wgsl  header.wgsl
